--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "concurrently": "^3.5.1",
     "cash-dom": "^2.1.6",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
