--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "concurrently": "^3.5.1",
     "cash-dom": "^2.1.6",
+    "concurrently": "^3.5.1",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.0.1",
+    "gulp-html-prettify": "0.0.1",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^4.0.1",
     "modularscale-sass": "^3.0.5",
