--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "cash-dom": "^2.1.6",
     "concurrently": "^3.5.1",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
@@ -21,12 +20,13 @@
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.0.1",
     "gulp-html-prettify": "0.0.1",
+    "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^4.0.1",
     "modularscale-sass": "^3.0.5",
     "pump": "^3.0.0",
     "rollup": "^0.59.1",
     "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-includepaths": "^0.2.2",
+    "rollup-plugin-includepaths": "^0.2.2"
   }
 }
