--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@awea/gulp-pretty-html": "^1.0.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -17,11 +18,15 @@
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
+    "gulp-cleanhtml": "^1.0.3",
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.0.1",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-html-prettify": "0.0.1",
+    "gulp-htmltidy": "^0.2.4",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^7.0.1",
+    "gulp-remove-empty-lines": "^0.1.0",
     "gulp-sass": "^4.0.1",
     "modularscale-sass": "^3.0.5",
     "pump": "^3.0.0",
