--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sass": "^4.0.1",
     "live-server": "^1.2.0",
     "modularscale-sass": "^3.0.5",
+    "perfectionist": "^2.4.0",
     "pump": "^3.0.0",
     "rollup": "^0.59.4",
     "rollup-plugin-babel": "^3.0.4",
