--- a/package.json
+++ b/package.json
@@ -16,22 +16,18 @@
     "clean-html": "^1.5.0",
     "concurrently": "^3.5.1",
     "css-mqpacker": "^6.0.2",
-    "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-insert": "^0.5.0",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^4.0.1",
     "live-server": "^1.2.0",
     "modularscale-sass": "^3.0.5",
     "perfectionist": "^2.4.0",
-    "pretty": "^2.0.0",
     "pump": "^3.0.0",
     "readable-stream": "^2.3.6",
     "rollup": "^0.59.4",
     "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-includepaths": "^0.2.2",
-    "through2": "^2.0.3"
+    "rollup-plugin-includepaths": "^0.2.2"
   }
 }
