--- a/package.json
+++ b/package.json
@@ -2,32 +2,20 @@
   "name": "ap-2018",
   "version": "1.0.0",
   "scripts": {
-    "dev-server": "live-server --port=3030 --watch=public/assets/ public/",
-    "dev": "concurrently --kill-others \"rollup -c -w\" \"gulp watch\" \"npm run dev-server\"",
-    "build": "rollup -c && gulp build"
+    "dev": "gulp watch"
   },
-  "author": "Tim Rosskamp",
+  "author": "414",
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "clean-html": "^1.5.0",
-    "concurrently": "^3.5.1",
     "css-mqpacker": "^6.0.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^4.0.1",
-    "live-server": "^1.2.0",
     "modularscale-sass": "^3.0.5",
     "perfectionist": "^2.4.0",
-    "pump": "^3.0.0",
-    "readable-stream": "^2.3.6",
-    "rollup": "^0.59.4",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-includepaths": "^0.2.2"
+    "pump": "^3.0.0"
   }
 }
